projet_gl/src/test/deca/syntax/valid/listDeclVar/booleanLiteral.deca
// Description:
//    test parser for boolean expression.
//
// Resultats:
//    `> [19, 0] Program
//       +> ListDeclClass [List with 0 elements]
//       `> [19, 0] Main
//          +> ListDeclVar [List with 1 elements]
//          |  []> [20, 12] DeclVar
//          |      +> [20, 12] Identifier (boolean)
//          |      +> [20, 12] Identifier (test)
//          |      `> [2O, 19] Initialization
//          |         `> [20, 19] BooleanLiteral (true)
//          `> ListInst [List with 0 elements]
//
// Historique:
//    cree le 12/01/2024

{
    boolean test = true;
}